# onfinality_ruby

./: Dockerfile  README.md  entrypoint.sh  rubyio-plain.json  rubyio-raw.json
Ruby_milestone2/: Dockerfile-authority-api  Dockerfile-owner-api  Dockerfile-purchaser-api  Dockerfile-ruby-ui
Ruby_milestone2/ruby-ui/: .env  package-lock.json  package.json
Ruby_milestone2/ruby-ui/src/: setupProxy.js
subquery/: package.json  project.yaml  schema.graphql
subquery/src/mappings/: mappingHandlers.ts
subquery/src/types/models/: Event.ts  Extrinsic.ts  SpecVersion.ts
zeropool_substrate/: Dockerfile  README.md
zeropool_substrate/zk-substrate-devnet/: Cargo.toml  Makefile
zeropool_substrate/zk-substrate-devnet/node/: Cargo.toml
zeropool_substrate/zk-substrate-devnet/pallets/zeropool-substrate/: Cargo.toml
zeropool_substrate/zk-substrate-devnet/pallets/zeropool-substrate/src/: lib.rs
zeropool_substrate/zk-substrate-devnet/runtime/: Cargo.toml
zeropool_substrate/zk-substrate-devnet/runtime/src/: lib.rs
