[package]
authors = ['Samuele Landi <samuele@landi.ae>']
description = 'Zeropool Pallet for private transaction'
edition = '2018'
homepage = 'https://zeropool.network'
license = 'Unlicense'
name = 'zeropool-substrate'
repository = 'https://github.com/zeropoolnetwork'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", default-features = false, optional = false, features = ["derive"] }

frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", optional = true }

sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-std = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

base64 = { default-features = false, version = '0.13.0', features=["alloc"] }
primitive-types =  { default-features = false, version = '0.7.3'}
rand =  { default-features = false, version = '0.7.3'}
serde_json = { version = "1.0.82", default-features = false, features = ["alloc"] }
ff-uint =  { version = '0.2.4', git = "https://github.com/voidxnull/fawkes-crypto", branch = "update-scale-codec", default-features = false, features = ['borsh_support', 'scale_support'] }
ff-uint_derive = { version = "0.2.4", git="https://github.com/voidxnull/fawkes-crypto",optional=false,default-features=false,branch = "update-scale-codec", features=["borsh_support"] }
borsh = { version = '0.9.1', default-features = false }

[dependencies.bn]
package = "zeropool-bn"
git ="https://github.com/zeropoolnetwork/bn.git"
branch="feature/no-std"
version = "0.5.7"
default-features = false
features = []

[dev-dependencies]
pretty_assertions = "0.4.0"


[features]
default = ["std", "borsh_support"]
borsh_support = []
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "ff-uint/std",
    "borsh/std"
]